add google sheets task that uses oauth, add full demographics data to map popup

--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "component-responsive-frame": "~1.4.1",
     "csv": "^5.3.1",
     "exorcist": "^0.4.0",
-    "google-spreadsheets": "^0.4.1",
+    "googleapis": "^45.0.0",
     "grunt": "^1.0.4",
     "grunt-contrib-connect": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "icanhaz": "^0.10.3",
     "less": "^2.0.0",
     "mime": "^1.2.11",
     "shelljs": "^0.5.1",
