--- a/project.json
+++ b/project.json
@@ -11,6 +11,7 @@
   },
   "title": "",
   "description": "",
+  "sheets": ["1MpGRNdRJ8hEGdG6FuPTmqc5P4BJgD0yiNXeVS2U4iYU"],
   "url": "",
   "slug": "",
   "tags": []
